@@ -40,6 +40,7 @@
 -- changed normalizer ip4.base and tcp.base to default to true
 -- session flag clean up
 -- fix wizard dtor
+-- fixed norm module handling of tcp opts
 
 127
 -- REG_TEST out logging tcp options for rebuilt packets to match snort bug
